src/coolc/1Parser/CoolParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Cool.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419




#pragma warning disable CS1591 // Missing XML comment for publicly visible type or member
#pragma warning disable CS3021 // Type or member does not need a CLSCompliant attribute because the assembly does not have a CLSCompliant attribute
#pragma warning disable CS0105 //The using directive for 'System.Collections.Generic' appeared previously in this namespace [D:\Desktop\projects\coolc\coolc\src\coolc\coolc.csproj


using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class CoolParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		LPAREN=1, RPAREN=2, COLON=3, ATSYM=4, COMMA=5, PLUS=6, MINUS=7, STAR=8, 
		SLASH=9, TILDE=10, LT=11, BT=12, EQUALS=13, LBRACE=14, RBRACE=15, DOT=16, 
		LE=17, BE=18, ASSIGN=19, SEMICOLON=20, DARROW=21, CLASS=22, ELSE=23, FI=24, 
		IF=25, IN=26, INHERITS=27, LET=28, LOOP=29, POOL=30, THEN=31, WHILE=32, 
		CASE=33, ESAC=34, OF=35, NEW=36, ISVOID=37, NOT=38, BOOL=39, ID=40, TYPE=41, 
		INT=42, STRING=43, WS=44, LINE_COMMENT=45, BLOCKCOMMENT=46;
	public const int
		RULE_program = 0, RULE_classdef = 1, RULE_feature = 2, RULE_formal = 3, 
		RULE_expresion = 4, RULE_newvar = 5;
	public static readonly string[] ruleNames = {
		"program", "classdef", "feature", "formal", "expresion", "newvar"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "':'", "'@'", "','", "'+'", "'-'", "'*'", "'/'", "'~'", 
		"'<'", "'>'", "'='", "'{'", "'}'", "'.'", "'<='", "'>='", "'<-'", "';'", 
		"'=>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "LPAREN", "RPAREN", "COLON", "ATSYM", "COMMA", "PLUS", "MINUS", 
		"STAR", "SLASH", "TILDE", "LT", "BT", "EQUALS", "LBRACE", "RBRACE", "DOT", 
		"LE", "BE", "ASSIGN", "SEMICOLON", "DARROW", "CLASS", "ELSE", "FI", "IF", 
		"IN", "INHERITS", "LET", "LOOP", "POOL", "THEN", "WHILE", "CASE", "ESAC", 
		"OF", "NEW", "ISVOID", "NOT", "BOOL", "ID", "TYPE", "INT", "STRING", "WS", 
		"LINE_COMMENT", "BLOCKCOMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Cool.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CoolParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}




		public CoolParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CoolParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(CoolParser.Eof, 0); }
		public ClassdefContext[] classdef() {
			return GetRuleContexts<ClassdefContext>();
		}
		public ClassdefContext classdef(int i) {
			return GetRuleContext<ClassdefContext>(i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(CoolParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(CoolParser.SEMICOLON, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 15;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 12; classdef();
				State = 13; Match(SEMICOLON);
				}
				}
				State = 17;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==CLASS );
			State = 19; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassdefContext : ParserRuleContext {
		public IToken t;
		public IToken it;
		public ITerminalNode CLASS() { return GetToken(CoolParser.CLASS, 0); }
		public ITerminalNode LBRACE() { return GetToken(CoolParser.LBRACE, 0); }
		public ITerminalNode RBRACE() { return GetToken(CoolParser.RBRACE, 0); }
		public ITerminalNode[] TYPE() { return GetTokens(CoolParser.TYPE); }
		public ITerminalNode TYPE(int i) {
			return GetToken(CoolParser.TYPE, i);
		}
		public ITerminalNode INHERITS() { return GetToken(CoolParser.INHERITS, 0); }
		public FeatureContext[] feature() {
			return GetRuleContexts<FeatureContext>();
		}
		public FeatureContext feature(int i) {
			return GetRuleContext<FeatureContext>(i);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(CoolParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(CoolParser.SEMICOLON, i);
		}
		public ClassdefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classdef; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterClassdef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitClassdef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassdef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassdefContext classdef() {
		ClassdefContext _localctx = new ClassdefContext(Context, State);
		EnterRule(_localctx, 2, RULE_classdef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21; Match(CLASS);
			State = 22; _localctx.t = Match(TYPE);
			State = 25;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INHERITS) {
				{
				State = 23; Match(INHERITS);
				State = 24; _localctx.it = Match(TYPE);
				}
			}

			State = 27; Match(LBRACE);
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 28; feature();
				State = 29; Match(SEMICOLON);
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 36; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FeatureContext : ParserRuleContext {
		public FeatureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_feature; } }
	 
		public FeatureContext() { }
		public virtual void CopyFrom(FeatureContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AttribFeatureContext : FeatureContext {
		public IToken id;
		public IToken t;
		public ExpresionContext e;
		public ITerminalNode COLON() { return GetToken(CoolParser.COLON, 0); }
		public ITerminalNode ID() { return GetToken(CoolParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolParser.TYPE, 0); }
		public ITerminalNode ASSIGN() { return GetToken(CoolParser.ASSIGN, 0); }
		public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		public AttribFeatureContext(FeatureContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterAttribFeature(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitAttribFeature(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttribFeature(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MethodFeatureContext : FeatureContext {
		public IToken id;
		public IToken t;
		public ExpresionContext e;
		public ITerminalNode LPAREN() { return GetToken(CoolParser.LPAREN, 0); }
		public ITerminalNode RPAREN() { return GetToken(CoolParser.RPAREN, 0); }
		public ITerminalNode COLON() { return GetToken(CoolParser.COLON, 0); }
		public ITerminalNode LBRACE() { return GetToken(CoolParser.LBRACE, 0); }
		public ITerminalNode RBRACE() { return GetToken(CoolParser.RBRACE, 0); }
		public ITerminalNode ID() { return GetToken(CoolParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolParser.TYPE, 0); }
		public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		public FormalContext[] formal() {
			return GetRuleContexts<FormalContext>();
		}
		public FormalContext formal(int i) {
			return GetRuleContext<FormalContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(CoolParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(CoolParser.COMMA, i);
		}
		public MethodFeatureContext(FeatureContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterMethodFeature(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitMethodFeature(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodFeature(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FeatureContext feature() {
		FeatureContext _localctx = new FeatureContext(Context, State);
		EnterRule(_localctx, 4, RULE_feature);
		int _la;
		try {
			State = 64;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				_localctx = new MethodFeatureContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 38; ((MethodFeatureContext)_localctx).id = Match(ID);
				State = 39; Match(LPAREN);
				State = 48;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ID) {
					{
					State = 40; formal();
					State = 45;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMMA) {
						{
						{
						State = 41; Match(COMMA);
						State = 42; formal();
						}
						}
						State = 47;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}

				State = 50; Match(RPAREN);
				State = 51; Match(COLON);
				State = 52; ((MethodFeatureContext)_localctx).t = Match(TYPE);
				State = 53; Match(LBRACE);
				State = 54; ((MethodFeatureContext)_localctx).e = expresion(0);
				State = 55; Match(RBRACE);
				}
				break;
			case 2:
				_localctx = new AttribFeatureContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 57; ((AttribFeatureContext)_localctx).id = Match(ID);
				State = 58; Match(COLON);
				State = 59; ((AttribFeatureContext)_localctx).t = Match(TYPE);
				State = 62;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ASSIGN) {
					{
					State = 60; Match(ASSIGN);
					State = 61; ((AttribFeatureContext)_localctx).e = expresion(0);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormalContext : ParserRuleContext {
		public IToken id;
		public IToken t;
		public ITerminalNode COLON() { return GetToken(CoolParser.COLON, 0); }
		public ITerminalNode ID() { return GetToken(CoolParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolParser.TYPE, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formal; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterFormal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitFormal(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormalContext formal() {
		FormalContext _localctx = new FormalContext(Context, State);
		EnterRule(_localctx, 6, RULE_formal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; _localctx.id = Match(ID);
			State = 67; Match(COLON);
			State = 68; _localctx.t = Match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpresionContext : ParserRuleContext {
		public ExpresionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expresion; } }
	 
		public ExpresionContext() { }
		public virtual void CopyFrom(ExpresionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LessExpContext : ExpresionContext {
		public ExpresionContext le;
		public ExpresionContext re;
		public ITerminalNode LT() { return GetToken(CoolParser.LT, 0); }
		public ExpresionContext[] expresion() {
			return GetRuleContexts<ExpresionContext>();
		}
		public ExpresionContext expresion(int i) {
			return GetRuleContext<ExpresionContext>(i);
		}
		public LessExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterLessExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitLessExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLessExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdentifierExpContext : ExpresionContext {
		public IToken id;
		public ITerminalNode ID() { return GetToken(CoolParser.ID, 0); }
		public IdentifierExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterIdentifierExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitIdentifierExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignExpContext : ExpresionContext {
		public IToken id;
		public ExpresionContext e;
		public ITerminalNode ASSIGN() { return GetToken(CoolParser.ASSIGN, 0); }
		public ITerminalNode ID() { return GetToken(CoolParser.ID, 0); }
		public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		public AssignExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterAssignExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitAssignExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AtsimExpContext : ExpresionContext {
		public IToken t;
		public IToken id;
		public ExpresionContext[] expresion() {
			return GetRuleContexts<ExpresionContext>();
		}
		public ExpresionContext expresion(int i) {
			return GetRuleContext<ExpresionContext>(i);
		}
		public ITerminalNode DOT() { return GetToken(CoolParser.DOT, 0); }
		public ITerminalNode LPAREN() { return GetToken(CoolParser.LPAREN, 0); }
		public ITerminalNode RPAREN() { return GetToken(CoolParser.RPAREN, 0); }
		public ITerminalNode ID() { return GetToken(CoolParser.ID, 0); }
		public ITerminalNode ATSYM() { return GetToken(CoolParser.ATSYM, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolParser.TYPE, 0); }
		public ITerminalNode[] COMMA() { return GetTokens(CoolParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(CoolParser.COMMA, i);
		}
		public AtsimExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterAtsimExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitAtsimExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtsimExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IsvoidExpContext : ExpresionContext {
		public ExpresionContext e;
		public ITerminalNode ISVOID() { return GetToken(CoolParser.ISVOID, 0); }
		public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		public IsvoidExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterIsvoidExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitIsvoidExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIsvoidExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BoolExpContext : ExpresionContext {
		public ITerminalNode BOOL() { return GetToken(CoolParser.BOOL, 0); }
		public BoolExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterBoolExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitBoolExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolExp(this);
			else return visitor.VisitChildren(this);
		}
	}
    public partial class BiggerEqualExpContext : ExpresionContext
    {
        public ExpresionContext le;
        public ExpresionContext re;
        public ITerminalNode BE() { return GetToken(CoolParser.BE, 0); }
        public ExpresionContext[] expresion()
        {
            return GetRuleContexts<ExpresionContext>();
        }
        public ExpresionContext expresion(int i)
        {
            return GetRuleContext<ExpresionContext>(i);
        }
        public BiggerEqualExpContext(ExpresionContext context) { CopyFrom(context); }
        public override void EnterRule(IParseTreeListener listener)
        {
            ICoolListener typedListener = listener as ICoolListener;
            if (typedListener != null) typedListener.EnterBiggerEqualExp(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ICoolListener typedListener = listener as ICoolListener;
            if (typedListener != null) typedListener.ExitBiggerEqualExp(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitBiggerEqualExp(this);
            else return visitor.VisitChildren(this);
        }
    }
    public partial class LessEqualExpContext : ExpresionContext {
		public ExpresionContext le;
		public ExpresionContext re;
		public ITerminalNode LE() { return GetToken(CoolParser.LE, 0); }
		public ExpresionContext[] expresion() {
			return GetRuleContexts<ExpresionContext>();
		}
		public ExpresionContext expresion(int i) {
			return GetRuleContext<ExpresionContext>(i);
		}
		public LessEqualExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterLessEqualExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitLessEqualExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLessEqualExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	
	public partial class WhileExpContext : ExpresionContext {
		public ExpresionContext le;
		public ExpresionContext re;
		public ITerminalNode WHILE() { return GetToken(CoolParser.WHILE, 0); }
		public ITerminalNode LOOP() { return GetToken(CoolParser.LOOP, 0); }
		public ITerminalNode POOL() { return GetToken(CoolParser.POOL, 0); }
		public ExpresionContext[] expresion() {
			return GetRuleContexts<ExpresionContext>();
		}
		public ExpresionContext expresion(int i) {
			return GetRuleContext<ExpresionContext>(i);
		}
		public WhileExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterWhileExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.ExitWhileExp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolVisitor<TResult> typedVisitor = visitor as ICoolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileExp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NotExpContext : ExpresionContext {
		public ExpresionContext e;
		public ITerminalNode NOT() { return GetToken(CoolParser.NOT, 0); }
		public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		public NotExpContext(ExpresionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICoolListener typedListener = listener as ICoolListener;
			if (typedListener != null) typedListener.EnterNotExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
